<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.franc.tdgchat.SecondActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="@color/bianco"
        android:textSize="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reg"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:gravity="center"
        android:hint="@string/nominativo"
        android:textCursorDrawable="@null"
        android:textColor="@color/bgrossoscuro"
        android:height="50dp"
        android:background="@drawable/edit_text_style"
        android:layout_marginTop="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:inputType="textWebEmailAddress"
        android:background="@drawable/edit_text_style"
        android:height="50dp"
        android:hint="@string/email"
        android:textCursorDrawable="@null"
        android:textColor="@color/bgrossoscuro"
        android:id="@+id/editText2"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/editText3"
        android:gravity="center"
        android:textCursorDrawable="@null"
        android:hint="@string/password"
        android:textColor="@color/bgrossoscuro"
        android:height="50dp"
        android:inputType="textPassword"
        android:ellipsize="start"
        android:background="@drawable/edit_text_style"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/editText4"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/repassword"
        android:ellipsize="start"
        android:textCursorDrawable="@null"
        android:textColor="@color/bgrossoscuro"
        android:height="50dp"
        android:background="@drawable/edit_text_style"
        android:layout_marginTop="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:height="50dp"
        android:hint="@string/num_telefono"
        android:background="@drawable/edit_text_style"
        android:textColor="@color/bgrossoscuro"
        android:textCursorDrawable="@null"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:id="@+id/editText5"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/bianco"
        android:text="@string/registrati"
        android:layout_marginTop="40dp"
        android:id="@+id/button1"
        android:background="@drawable/button_style"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>