<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.franc.tdgchat.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:textColor = "@color/bgrossoscuro"
        android:textCursorDrawable="@null"
        android:gravity="center"
        android:hint="@string/email"
        android:id="@+id/editText1"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_text_style" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:ellipsize="start"
        android:textColor = "@color/bgrossoscuro"
        android:textCursorDrawable="@null"
        android:gravity="center"
        android:id="@+id/editText2"
        android:background="@drawable/edit_text_style"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="@color/grigio"
        android:text="@string/rec"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/button1"
        android:gravity="center"
        android:background="@drawable/button_style"
        android:textColor="@color/bianco"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_style"
        android:id="@+id/button2"
        android:gravity="center"
        android:textColor="@color/bianco"
        android:text="@string/registrati"
        android:layout_marginBottom="20dp" />


</LinearLayout>
