<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_third"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.franc.tdgchat.ThirdActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="@color/bianco"
        android:textSize="30dp"
        android:layout_marginBottom="34dp"
        android:text="@string/recuperap"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="45dp"
        android:hint="@string/email"
        android:textColor = "@color/bgrossoscuro"
        android:textCursorDrawable="@null"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:id="@+id/editText1"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:textColor = "@color/bgrossoscuro"
        android:hint="@string/num_telefono"
        android:textCursorDrawable="@null"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/editText2"
        android:background="@drawable/edit_text_style"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/button1"
        android:gravity="center"
        android:background="@drawable/button_style"
        android:textColor="@color/bianco"
        android:text="@string/recupera"
        android:layout_marginTop="20dp" />

</LinearLayout>